--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "test converter",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --reporter spec",
-	"cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+    "test": "mocha --reporter nyan",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/sathishonline100/test-converter#readme",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "coveralls": "^3.0.11",
-    "istanbul": "^0.4.5",
-    "mocha": "^7.1.1"
+     "chai": "~3.0.0",
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.17",
+    "mocha": "~2.2.5"
   }
 }
